cleaned up spacing issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
 	/* background-image: url(../images/background.jpg); */
-	height: 100%;
+	/* height: 100%; */
 	background: linear-gradient(to right, #ddf0fb, #bedcf6, #94e8c4,#80cbcb);
 	background-position: center;
 	background-size: cover;
@@ -25,13 +25,13 @@ body {
 	margin: auto;
 	text-align: center;
 	padding: 5px;
-	font-size: 20px;
+	font-size: 25px;
 	background-color: #9999fa;
 	color: #ffffff;
 	border: 2px solid white;
 	border-radius: 25px;
 	width: 80%;
-	margin-bottom: 20px;
+	margin-bottom: 25px;
 }
 
 p {
